<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
    <string name="app_name" translatable="false">AutoJs6</string>
    <string name="app_name_qq" translatable="false">QQ</string>
    <string name="color_library_identifier_android_colors" translatable="false">Android</string>
    <string name="color_library_identifier_css_colors" translatable="false">CSS</string>
    <string name="color_library_identifier_web_colors" translatable="false">WEB</string>
    <string name="com_twofortyfouram_log_tag" tools:ignore="ResourceName" translatable="false" />
    <string name="default_build_apk_version_code" translatable="false">1</string>
    <string name="default_build_apk_version_name" translatable="false">1.0.0</string>
    <string name="default_key_app_language" translatable="false">@string/key_app_language_auto</string>
    <string name="default_key_documentation_source" translatable="false">@string/key_documentation_source_local</string>
    <string name="default_key_editor_pinch_to_zoom_strategy" translatable="false">@string/key_editor_pinch_to_zoom_change_text_size</string>
    <string name="default_key_file_extensions" translatable="false">@string/key_file_extensions_show_all_but_executable</string>
    <string name="default_key_hidden_files" translatable="false">@string/key_hidden_files_not_show</string>
    <string name="default_key_keep_screen_on_when_in_foreground" translatable="false">@string/key_keep_screen_on_when_in_foreground_disabled</string>
    <string name="default_key_launcher_icon" translatable="false">@string/key_launcher_icon_adaptive</string>
    <string name="default_key_night_mode" translatable="false">@string/key_night_mode_follow_system</string>
    <string name="default_key_restart_strategy" translatable="false">@string/key_restart_strategy_quick</string>
    <string name="default_key_root_mode" translatable="false">@string/key_root_mode_auto_detect</string>
    <string name="default_key_root_record_out_file_type" translatable="false">@string/key_root_record_out_file_type_binary</string>
    <string name="default_key_scheduled_restart_backend" translatable="false">@string/key_scheduled_restart_backend_work_manager</string>
    <string name="default_key_timed_task_backend" translatable="false">@string/key_timed_task_backend_alarm</string>
    <string name="default_main_file_name" translatable="false">main.js</string>
    <string name="developer_full_name" translatable="false">SuperMonster003</string>
    <string name="developer_nickname" translatable="false">SuperMonster003</string>
    <string name="ellipsis_six" translatable="false" tools:ignore="TypographyEllipsis">... ...</string>
    <string name="ellipsis_three" translatable="false" tools:ignore="TypographyEllipsis">...</string>
    <string name="email" translatable="false">hybbbb1996@gmail.com</string>
    <string name="entry_app_language_ar" translatable="false">العربية</string>
    <string name="entry_app_language_en" translatable="false">English</string>
    <string name="entry_app_language_es" translatable="false">Español</string>
    <string name="entry_app_language_fr" translatable="false">Français</string>
    <string name="entry_app_language_ja" translatable="false">日本語</string>
    <string name="entry_app_language_ko" translatable="false">한국어</string>
    <string name="key_all_files_access" translatable="false">key_$_all_files_access</string>
    <string name="key_check_for_updates_while_ignoring_the_local_version" translatable="false">key_$_check_for_updates_while_ignoring_the_local_version</string>
    <string name="key_display_over_other_apps" translatable="false">key_$_display_over_other_apps</string>
    <string name="key_documentation_source" translatable="false">key_$_documentation_source</string>
    <string name="key_enable_a11y_service_with_root_access" translatable="false">key_$_enable_a11y_service_with_root_access</string>
    <string name="key_enable_a11y_service_with_secure_settings" translatable="false">key_$_enable_a11y_service_with_secure_settings</string>
    <string name="key_foreground_service" translatable="false">key_$_foreground_service</string>
    <string name="key_guard_mode" translatable="false">key_$_guard_mode</string>
    <string name="key_not_showing_main_activity" translatable="false">key_$_not_showing_main_activity</string>
    <string name="key_run_on_boot_inrt" translatable="false">key_$_run_on_boot_inrt</string>
    <string name="key_post_notifications_permission" translatable="false">key_$_post_notifications_permission</string>
    <string name="key_record_toast" translatable="false">key_$_record_toast</string>
    <string name="key_root_record_out_file_type" translatable="false">key_$_root_record_out_file_type</string>
    <string name="key_stable_mode" translatable="false">key_$_stable_mode</string>
    <string name="key_updates_checked_states_cleared" translatable="false">key_$_updates_checked_states_cleared</string>
    <string name="key_use_volume_control_record" translatable="false">key_$_use_volume_control_record</string>
    <string name="key_use_volume_control_running" translatable="false">key_$_use_volume_control_running</string>
    <string name="text_clear_updates_checked_states_description" translatable="false">NoNewer, Postponed, Check, AutoCheck</string>
    <string name="summary_all_files_access_inrt">Allow the application to access all files, including external storage</string>
    <string name="summary_display_over_other_apps_inrt">Allow the application to display content over other apps</string>
    <string name="summary_enable_a11y_service_with_root_access">Enable accessibility service with root access automatically when needed</string>
    <string name="summary_enable_a11y_service_with_secure_settings">Enable accessibility service with secure settings automatically when needed</string>
    <string name="summary_foreground_service_inrt">The foreground service helps keep the app and scripts running more reliably in the background</string>
    <string name="summary_guard_mode">Prevent automation actions from scripts when AutoJs6 is in the foreground</string>
    <string name="summary_not_showing_main_activity">Run script directly without showing main activity</string>
    <string name="summary_post_notifications_permission_inrt">Allow the application to create and send notifications</string>
    <string name="summary_stable_mode">More stable layout analysis but worse code compatibility (a11y service restarting needed)</string>
    <string name="summary_use_volume_control_record">Start or stop recording controlled by \"Volume Down\" key when floating button is showing</string>
    <string name="text_a11y_service">Accessibility service</string>
    <string name="text_about">About</string>
    <string name="text_about_app_and_developer">About app and developer</string>
    <string name="text_all_files_access">All files access</string>
    <string name="text_app_language">Language</string>
    <string name="text_appearance">Appearance</string>
    <string name="text_build_apk">Build APK</string>
    <string name="text_category_filter">Category filter</string>
    <string name="text_change_working_dir">Change working directory</string>
    <string name="text_check_for_updates">Check for updates</string>
    <string name="text_check_for_updates_while_ignoring_the_local_version">Check for updates (ignore the local version)</string>
    <string name="text_check_for_updates_while_ignoring_the_local_version_description">Fetch the latest remote version directly when checking for updates</string>
    <string name="text_clear">Clear</string>
    <string name="text_clear_trash">Clear trash</string>
    <string name="text_clear_updates_checked_states">Clear updates checked states</string>
    <string name="text_collapse_all">Collapse all</string>
    <string name="text_color_palette">Color palette</string>
    <string name="text_config">Config</string>
    <string name="text_copy">Copy</string>
    <string name="text_copy_to">Copy to</string>
    <string name="text_date">Date</string>
    <string name="text_delete">Delete</string>
    <string name="text_display_over_other_app">Display over other apps</string>
    <string name="text_documentation_source">Documentation source</string>
    <string name="text_enable_a11y_service_with_root_access_automatically">Enable accessibility service with root access automatically</string>
    <string name="text_enable_a11y_service_with_secure_settings_automatically">Enable accessibility service with secure settings automatically</string>
    <string name="text_expand_all">Expand all</string>
    <string name="text_export">Export</string>
    <string name="text_filter">Filter</string>
    <string name="text_foreground_service">Foreground service</string>
    <string name="text_global_settings">Global settings</string>
    <string name="text_guard_mode">Guard mode</string>
    <string name="text_install">Install</string>
    <string name="text_install_from_local_file">Install from \"Local File\"</string>
    <string name="text_install_from_url">Install from \"URL\"</string>
    <string name="text_issue_report">Feedback</string>
    <string name="text_licenses">Open Sources Licenses</string>
    <string name="text_locate_current_theme_color">Locate current theme color</string>
    <string name="text_move_to">Move to</string>
    <string name="text_name">Name</string>
    <string name="text_new_color_library">New color library</string>
    <string name="text_not_showing_main_activity">Not showing main activity</string>
    <string name="text_open_by_other_apps">Open by other apps</string>
    <string name="text_permission_management">Permission management</string>
    <string name="text_post_notifications_permission">Post notifications</string>
    <string name="text_process_log">Process log</string>
    <string name="text_recorded_output_file_type">Recorded output file type</string>
    <string name="text_rename">Rename</string>
    <string name="text_reset_to_initial_content">Reset initially</string>
    <string name="text_run_on_boot">On booted</string>
    <string name="text_run_repeatedly">Run repeatedly</string>
    <string name="text_script_record">Script recording</string>
    <string name="text_script_running">Script running</string>
    <string name="text_search">Search</string>
    <string name="text_search_color">Search color</string>
    <string name="text_send">Send</string>
    <string name="text_send_shortcut">Create shortcut</string>
    <string name="text_service_management">Service management</string>
    <string name="text_settings">Settings</string>
    <string name="text_size">Size</string>
    <string name="text_sort">Sort</string>
    <string name="text_sort_by_name_asc">Name (A-Z)</string>
    <string name="text_sort_by_path_asc">Path (A-Z)</string>
    <string name="text_sort_by_size_asc">Size (smallest first)</string>
    <string name="text_sort_by_size_desc">Size (largest first)</string>
    <string name="text_sort_by_time_asc">Time (oldest first)</string>
    <string name="text_sort_by_time_desc">Time (newest first)</string>
    <string name="text_special_permissions">Special permissions</string>
    <string name="text_stable_mode">Stable mode</string>
    <string name="text_switch_to_legacy_layout">Switch to legacy layout</string>
    <string name="text_theme_color">Theme color</string>
    <string name="text_timed_task">Timed task</string>
    <string name="text_type">Type</string>
    <string name="text_updates">Updates</string>
    <string name="text_use_volume_control_record">Use \"Volume Down\" key to control recording</string>
    <string name="text_use_volume_key_to_control_script_running">Use \"Volume Up\" key to control the script running</string>
    <string name="text_version_history">Version history</string>
</resources>