<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
        app:layout="@layout/preference_category_custom"
        android:title="@string/text_service_management">

        <org.autojs.autojs.inrt.theme.preference.ForegroundServiceSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:key="@string/key_foreground_service"
            android:summary="@string/summary_foreground_service_inrt"
            android:title="@string/text_foreground_service" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
        app:layout="@layout/preference_category_custom"
        android:title="@string/text_permission_management">

        <org.autojs.autojs.inrt.theme.preference.PostNotificationsPermissionSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:key="@string/key_post_notifications_permission"
            android:summary="@string/summary_post_notifications_permission_inrt"
            android:title="@string/text_post_notifications_permission" />

        <org.autojs.autojs.inrt.theme.preference.DisplayOverOtherAppsPermissionSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:key="@string/key_display_over_other_apps"
            android:summary="@string/summary_display_over_other_apps_inrt"
            android:title="@string/text_display_over_other_app" />

        <org.autojs.autojs.inrt.theme.preference.ManageAllFilesPermissionSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:key="@string/key_all_files_access"
            android:summary="@string/summary_all_files_access_inrt"
            android:title="@string/text_all_files_access" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
        app:layout="@layout/preference_category_custom"
        android:title="@string/text_script_running">

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:defaultValue="true"
            android:key="@string/key_use_volume_control_running"
            android:title="@string/text_use_volume_key_to_control_script_running" />

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:defaultValue="false"
            android:key="@string/key_run_on_boot_inrt"
            android:title="@string/text_run_on_boot" />

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:defaultValue="false"
            android:key="@string/key_not_showing_main_activity"
            android:summary="@string/summary_not_showing_main_activity"
            android:title="@string/text_not_showing_main_activity" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
        app:layout="@layout/preference_category_custom"
        android:title="@string/text_a11y_service">

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:defaultValue="false"
            android:key="@string/key_enable_a11y_service_with_root_access"
            android:summary="@string/summary_enable_a11y_service_with_root_access"
            android:title="@string/text_enable_a11y_service_with_root_access_automatically" />

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
            app:layout="@layout/preference_custom_inrt"
            android:defaultValue="false"
            android:key="@string/key_stable_mode"
            android:summary="@string/summary_stable_mode"
            android:title="@string/text_stable_mode" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

</PreferenceScreen>
