<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_move_to"
        android:title="@string/text_move_to" />
    <item
        android:id="@+id/action_copy_to"
        android:title="@string/text_copy_to" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/text_rename" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/text_delete" />
    <item
        android:id="@+id/action_version_history"
        android:title="@string/text_version_history" />
    <item
        android:id="@+id/action_timed_task"
        android:title="@string/text_timed_task" />
    <item
        android:id="@+id/action_create_shortcut"
        android:title="@string/text_send_shortcut" />
    <item
        android:id="@+id/action_build_apk"
        android:title="@string/text_build_apk" />
    <item
        android:id="@+id/action_reset"
        android:title="@string/text_reset_to_initial_content" />
    <item
        android:id="@+id/action_send"
        android:title="@string/text_send" />
    <item
        android:id="@+id/action_open_by_other_apps"
        android:title="@string/text_open_by_other_apps" />
    <item
        android:id="@+id/action_run_repeatedly"
        android:title="@string/text_run_repeatedly" />

</menu>