<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
        app:layout="@layout/preference_category_custom"
        app:title="@string/text_updates">

        <org.autojs.autojs.ui.settings.ClearUpdatesCheckedStatesPreference
            app:key="@string/key_updates_checked_states_cleared"
            app:layout="@layout/preference_custom"
            app:summary="@string/text_clear_updates_checked_states_description"
            app:title="@string/text_clear_updates_checked_states" />

        <org.autojs.autojs.ui.settings.CheckForUpdatesWithLocalVersionIgnoredPreference
            app:key="@string/key_check_for_updates_while_ignoring_the_local_version"
            app:layout="@layout/preference_custom"
            app:summary="@string/text_check_for_updates_while_ignoring_the_local_version_description"
            app:title="@string/text_check_for_updates_while_ignoring_the_local_version" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

</PreferenceScreen>