<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_expand_all"
        android:title="@string/text_expand_all"
        android:icon="@drawable/ic_expand_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_collapse_all"
        android:title="@string/text_collapse_all"
        android:icon="@drawable/ic_collapse_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter_category"
        android:title="@string/text_category_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_logs"
        android:title="@string/text_process_log"
        app:showAsAction="never" />

</menu>